Fix entries__list layout when cards wraps to next line

--- a/src/pages/MonthlyEntriesPage/MonthlyEntriesPage.scss
+++ b/src/pages/MonthlyEntriesPage/MonthlyEntriesPage.scss
@@ -30,6 +30,7 @@
         width: 100%;
         height: 100%;
         padding: $spacing-24;
+        align-content: flex-start;
     }
     &__item {
         @include flex-col($gap: 0);
